test/error/error.input068.zc
Redefinition of typedef:FOO on line 2 of input068.zc
